@@ -4,13 +4,13 @@ import static java.util.Objects.nonNull;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.apache.commons.lang3.StringUtils.stripToEmpty;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.isYes;
+import static uk.gov.hmcts.reform.sscs.util.SscsUtil.getLastValidHearing;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
@@ -30,6 +30,7 @@ import uk.gov.hmcts.reform.sscs.ccd.domain.EventType;
 import uk.gov.hmcts.reform.sscs.ccd.domain.HearingDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.IssueNoticeHandler;
+import uk.gov.hmcts.reform.sscs.config.DocumentConfiguration;
 import uk.gov.hmcts.reform.sscs.docassembly.GenerateFile;
 import uk.gov.hmcts.reform.sscs.model.VenueDetails;
 import uk.gov.hmcts.reform.sscs.model.client.JudicialUserBase;
@@ -61,8 +62,9 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
                                      VenueDataLoader venueDataLoader,
                                      @Value("${doc_assembly.adjourn_case}") String templateId,
                                      SignLanguagesService signLanguagesService,
-                                     JudicialRefDataService judicialRefDataService) {
-        super(generateFile, userDetailsService, languagePreference -> templateId);
+                                     JudicialRefDataService judicialRefDataService,
+                                     DocumentConfiguration documentConfiguration) {
+        super(generateFile, userDetailsService, languagePreference -> templateId, documentConfiguration);
         this.venueDataLoader = venueDataLoader;
         this.signLanguagesService = signLanguagesService;
         this.judicialRefDataService = judicialRefDataService;
@@ -95,19 +97,20 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
 
         adjournCaseBuilder.heldBefore(buildHeldBefore(caseData, userAuthorisation));
 
-        String venueName = setHearings(adjournCaseBuilder, caseData);
+        setHearings(adjournCaseBuilder, caseData);
+        String venueName = caseData.getProcessingVenue();
         adjournCaseBuilder.appellantName(buildName(caseData, false));
 
         if (adjournment.getReasons() != null && !adjournment.getReasons().isEmpty()) {
             adjournCaseBuilder.reasonsForDecision(
-                adjournment.getReasons().stream().map(CollectionItem::getValue).collect(Collectors.toList()));
+                adjournment.getReasons().stream().map(CollectionItem::getValue).toList());
         } else {
             adjournCaseBuilder.reasonsForDecision(null);
         }
 
         if (adjournment.getAdditionalDirections() != null) {
             adjournCaseBuilder.additionalDirections(adjournment.getAdditionalDirections().stream()
-                .map(CollectionItem::getValue).collect(Collectors.toList()));
+                .map(CollectionItem::getValue).toList());
         }
 
         String hearingType = adjournment.getTypeOfHearing() != null
@@ -302,8 +305,7 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
         }
     }
 
-    protected String setHearings(AdjournCaseTemplateBodyBuilder adjournCaseBuilder, SscsCaseData caseData) {
-        String venue = IN_CHAMBERS;
+    protected void setHearings(AdjournCaseTemplateBodyBuilder adjournCaseBuilder, SscsCaseData caseData) {
         if (CollectionUtils.isNotEmpty(caseData.getHearings())) {
             HearingDetails finalHearing = getLastValidHearing(caseData);
             if (finalHearing != null) {
@@ -314,7 +316,6 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
                     String venueName = venueDataLoader.getGapVenueName(finalHearing.getVenue(), finalHearing.getVenueId());
                     if (venueName != null) {
                         adjournCaseBuilder.heldAt(venueName);
-                        venue = venueName;
                     }
                 }
             } else {
@@ -323,7 +324,6 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
         } else {
             setInChambers(adjournCaseBuilder);
         }
-        return venue;
     }
 
     private void setInChambers(AdjournCaseTemplateBodyBuilder adjournCaseBuilder) {
@@ -359,11 +359,11 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
                 .map(panelMember ->
                     judicialRefDataService.getJudicialUserFullName(panelMember.getPersonalCode()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+                .toList());
         } else {
             List<String> panelMembers = Stream.of(adjournment.getDisabilityQualifiedPanelMemberName(),
                 adjournment.getMedicallyQualifiedPanelMemberName(), adjournment.getOtherPanelMemberName())
-                .filter(org.apache.commons.lang3.StringUtils::isNotBlank).collect(Collectors.toList());
+                .filter(org.apache.commons.lang3.StringUtils::isNotBlank).toList();
 
             names.addAll(panelMembers);
         }
